apps/staging/sonarr/httpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: default
spec:
  parentRefs:
  - name: myrobertson-com-gateway
    namespace: default
  hostnames: ["sonarr.staging.myrobertson.net"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sonarr
      port: 8989
